Agregación de activity's
- Se agregao un activity que recibe el año y muestra de que generación es, rasgo característico y la población.
- Se agrego un activity que muestra si eres mayor o menor de edad segun tu edad ingresada

--- a/appClase01/app/src/main/res/values/strings.xml
+++ b/appClase01/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">appClase01</string>
+    <string name="app_name">Ojeda Jose</string>
     <string name="txtBienvenidos">Bienvenidos</string>
 </resources>
